--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -106,7 +106,6 @@
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="archivetoursbox" style="position:absolute; width:162px; left:264px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
-  
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
@@ -118,7 +117,19 @@
     </ul>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-
+<div id="archivetracksbox" style="position:absolute; width:162px; left:444px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <ul style="padding:0px;">
+      <li>live tours</li>
+      <li>live traces</li>
+      <li>live users</li>
+    </ul>
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="archivebox" style="position:absolute; width:162px; left:261px; top:283px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="list-style:none;">
