--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -7,10 +7,14 @@
 <script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
 <!--
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAAnsKeh1eS56d4nSCvWmbcBSurnAizDIuQPYrT1jN4yvuBVLWkhT_FD84oCbtAcZNS3" type="text/javascript"></script>
--->
+
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQHBvw4Dj8Sg5rQsz5g3RvuAbjMvRQzK0V9mdSgW9mk-dHwn7fbIh-5yA" type="text/javascript"></script>
+-->
 <script type="text/javascript" src="js/gt/DHTML.js"></script>
+<script type="text/javascript" src="js/gt/GMap.js"></script>
+<script type="text/javascript" src="js/GMapKeys.js"></script>
 <script type="text/javascript" src="js/WPapp.js"></script>
+	
 <link rel="stylesheet" href="css/geotracing.css" />
 </head>
 <body onunload="GUnload()">
