base: do away with all .jsp's by using AJAX for menu loading etc.

--- a/base/trunk/server/webapp/gt/index.html
+++ b/base/trunk/server/webapp/gt/index.html
@@ -21,8 +21,8 @@
 <table width="100%" height="100%" border="0" cellspacing="0" cellpadding="0">
 <tr height="42">
 	<td bgcolor="#000044">
-		<!-- Main menu starts here -->
-		<jsp:include page="mainmenu.jsp" flush="true" />
+		<!-- Main menu starts here, loaded dynamically -->
+		<div id="menucontainer"></div>
 		<!-- Main menu ends here -->
 	</td>
 	<td width="320" bgcolor="#000044" align="right">
