base: modifications for GPX handling and trackpoint filtering

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -28,6 +28,15 @@
 <hr/>
 
 <div id="highlitebox">
+	<h2>Featured Tracks</h2>
+	<p>
+		Nov 29, 2006. A team of friends, <a href="http://www.vrienden-team.com" target="_new">"VriendenTeam"</a> uses
+		GeoTracing to track their route/photos in the <a href="http://www.amsterdamdakar.com/">Amsterdam Dakar Challenge</a>
+	</p>
+	<p>
+		<a href="http://www.geotracing.com/gt/?cmd=live&user=vrienden-team&zoom=5&map=map">Follow the VriendenTeam live &gt;&gt;</a><br/>
+	</p>
+	<hr/>
 	<p>During Sept 12-14, 2006 Just has been
 		tracing live from the
 		<a href="http://www.foss4g2006">FOSS4G Conference</a> in Lausanne,
@@ -35,13 +44,12 @@
 
 	<p>
 		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1731700&user=just&zoom=13&map=map">FOSS4G - sept 12,
-			2006</a><br/>
+			2006 &gt;&gt;</a><br/>
 		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1737880&user=just&zoom=13&map=map">FOSS4G - sept 13,
-			2006</a><br/>
+			2006 &gt;&gt;</a><br/>
 		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1744228&user=just&zoom=13&map=map">FOSS4G - sept 14,
-			2006 (+social event)</a><br/>
+			2006 (+social event) &gt;&gt;</a><br/>
 	</p>
-
 </div>
 
 <h2>About</h2>
