--- a/app/walkandplay/trunk/client/web/newaccount.html
+++ b/app/walkandplay/trunk/client/web/newaccount.html
@@ -168,7 +168,7 @@
   <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <!-- / CONTENT -->
 <!-- MAP-->
-<div id="map">test</div>
+<div id="map"></div>
 <!-- /MAP -->
 <!--BORDERS-->
 <div id="mapholder">
