base: various stuff icnluding MT status data

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -34,7 +34,7 @@
 		GeoTracing to track their route/photos in the <a href="http://www.amsterdamdakar.com/">Amsterdam Dakar Challenge</a>
 	</p>
 	<p>
-		<a href="http://www.geotracing.com/gt/?cmd=live&user=vrienden-team&zoom=5&map=map">Follow the VriendenTeam live &gt;&gt;</a><br/>
+		<a href="http://www.geotracing.com/gt/?cmd=live&user=vrienden-team&zoom=5&map=streets">Follow the VriendenTeam live &gt;&gt;</a><br/>
 	</p>
 	<hr/>
 	<p>During Sept 12-14, 2006 Just has been
@@ -43,12 +43,16 @@
 		Switzerland. Below are the tracks/photo's </p>
 
 	<p>
-		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1731700&user=just&zoom=13&map=map">FOSS4G - sept 12,
+		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1731700&user=just&zoom=13&map=streets">FOSS4G - sept 12,
 			2006 &gt;&gt;</a><br/>
-		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1737880&user=just&zoom=13&map=map">FOSS4G - sept 13,
+		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1737880&user=just&zoom=13&map=streets">FOSS4G - sept 13,
 			2006 &gt;&gt;</a><br/>
-		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1744228&user=just&zoom=13&map=map">FOSS4G - sept 14,
+		<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1744228&user=just&zoom=13&map=streets">FOSS4G - sept 14,
 			2006 (+social event) &gt;&gt;</a><br/>
+	</p>
+	<hr/>
+	<p>
+		<a href="/gt/srv/randomimagepage.jsp" >surprise me &gt;&gt;</a>
 	</p>
 </div>
 
