base: replace POI with text medium plus tags and migration code for existing POIs

--- a/base/trunk/server/webapp/gt/content/trkhelp.html
+++ b/base/trunk/server/webapp/gt/content/trkhelp.html
@@ -32,7 +32,7 @@
 	<p>Select "Show|Tracks". Then select a user and a track from
 		the dropdown boxes.<br/>The Track should be drawn on the map.
 		Each track has a window that displays
-		the media, POIs and track info. You can open multiple windows. Clicking
+		the media and track info. You can open multiple windows. Clicking
 		on a window takes you to the last point in the track.
 	</p>
 
@@ -44,15 +44,15 @@
 	<p>You can play back an archived tracks with media/POIs using the control buttons below the track.
 	</p>
 
-	<h3>Viewing Features</h3>
+	<h3>Viewing Media</h3>
 
-	<p>Selecting "Show|Media/POIs in Area" shows media/POIs (a.k.a features) of the map area in view. Since there are
+	<p>Selecting "Show|Media in Area" shows media (image/audio/text/video) of the map area in view. Since there are
 		potentially many
 		media in the archive a random selection is made. "Show|Media/POIs" shows random features from the archive
 		not necessarily in the current area.
 	</p>
 
-	<p>You can play back the media/POIs using the control buttons below the preview window. the map will center
+	<p>You can play back the media using the control buttons below the preview window. the map will center
 		at a selected feature.
 
 	<h3>Autoplay Tracks</h3>
