--- a/base/trunk/server/webapp/gt/index.html
+++ b/base/trunk/server/webapp/gt/index.html
@@ -47,7 +47,7 @@
 
 	</td>
 	<td width="320" bgcolor="#000066" align="left">
-		<span id="cmtlink"><a href="#" onclick="CMT.showCommentPanel(23, '', 'This Site')" >[comments]</a>&nbsp;&nbsp;</span>
+		<span id="cmtlink"><a href="#" onclick="CMT.showCommentPanel(23, '', 'This Site')" >[site comments]</a>&nbsp;&nbsp;</span>
 	</td>
 </tr>
 <tr>
@@ -104,7 +104,7 @@
 			</tr>
 			<tr>
 				<td height="240" width="320" valign="middle" align="center" bgcolor="#dddddd">
-					<div id="featurepreview">FEATURE (MEDIA+POIS) PREVIEW</div>
+					<div id="featurepreview">MEDIA PREVIEW</div>
 				</td>
 			</tr>
 			<tr>
