--- a/base/trunk/server/webapp/gt/my/menu/left-media.html
+++ b/base/trunk/server/webapp/gt/my/menu/left-media.html
@@ -1,3 +1,3 @@
 <strong>Media</strong><br/>
-<a href="control.jsp?cmd=nav-media-list">[view]</a><br/>
+<a href="control.jsp?cmd=nav-media-list">[manage]</a><br/>
 <a href="control.jsp?cmd=nav-media-upload">[upload]</a>
