--- a/base/trunk/server/webapp/gt/webtracer/index.html
+++ b/base/trunk/server/webapp/gt/webtracer/index.html
@@ -21,7 +21,7 @@
 			<ul>
 				<li><a href="#" fn="WT.onMenuCreateTrack">New</a></li>
 				<li id="suspendresume"><a href="#" fn="WT.onMenuResumeTrack">Resume</a></li>
-				<li><a href="#" fn="WT.onMenuAddPOI">Add POI</a></li>
+				<li><a href="#" fn="WT.onMenuAddText">Add Text</a></li>
 	<!--			<li><a href="#" fn="WT.onMenuAddMedium">Add Medium</a></li>  -->
 		    </ul>
 		</li>
