--- a/base/trunk/server/webapp/site/presentation/index.html
+++ b/base/trunk/server/webapp/site/presentation/index.html
@@ -306,10 +306,9 @@ just[AT]justobjects.nl<br/>
 		<li>rating tied to all subsequent track-points</li>
 	</ul>
 </li>
-<li>feature entry
+<li>add media
 	<ul>
-		<li>send photo/video/audio</li>
-		<li>add POIs</li>
+		<li>send text/photo/video/audio</li>
 	</ul>
 </li>
 <li>view your location on Google Map
