--- a/base/trunk/server/webapp/gt/my/menu/left-tracks.html
+++ b/base/trunk/server/webapp/gt/my/menu/left-tracks.html
@@ -1,3 +1,3 @@
 <strong>Tracks</strong><br/>
-<a href="control.jsp?cmd=nav-track-list">[view]</a><br/>
+<a href="control.jsp?cmd=nav-track-list">[manage]</a><br/>
 <a href="control.jsp?cmd=nav-track-upload">[upload]</a>
