base: first version location radar/monitor MobiTracer

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -199,8 +199,8 @@
 	routes followed by MobiTracers can be viewed. Each MobiTracer can also be followed
 	in real-time moving over the map.
 	In addition the MobiTracer can send <b><i>track-annotations</i></b> in the form of media (images/video/audio/text)
-	ratings (e.g. road-conditions) and Points of Interest (POIs)
-	to the server. Media and annotations are shown at their geographic locations on the map.
+	ratings (e.g. road-conditions).
+	to the server. Annotations are shown at their geographic locations on the map.
 	The server stores all data in a Content Management System (CMS) such that it is available
 	to a wealth of applications like map-creation, geodrawing,
 	playing back routes, geo/mobile-gaming etc.
@@ -224,15 +224,14 @@
 
 <p>
 	<ul>
-		<li>create GPS tracklogs remotely from mobile phone</li>
+		<li>record GPS tracklogs remotely from mobile phone</li>
 		<li>create GPS tracklogs remotely by (GPX) upload</li>
-		<li>submit and relate media (audio/video/images) to points in GPS tracklogs</li>
-		<li>submit and relate Points of Interests (POIs) to points in tracklogs</li>
+		<li>submit and relate media (audio/video/images/text) to points in GPS tracklogs</li>
 		<li>annotate tracklogs with route parameters (e.g asphalt rating, sceneray rating)</li>
 		<li>create overlayed maps by combining tracklogs</li>
 		<li>live/real-time tracing in browser</li>
 		<li>view and play back tracks in browser</li>
-		<li>Location Based Services (LBS) through trigger on geotagged objects (e.g. POIs)</li>
+		<li>Location Based Services (LBS) through trigger on geotagged objects (e.g. media)</li>
 		<li>portal functions: personal tracklogs and media</li>
 		<li>tagging: give tags to any items (tracks, media persons)</li>
 		<li>commenting: provide comments on any item (tracks, media persons)</li>
