wp finally in progress again

--- a/app/walkandplay/trunk/client/web/newaccount.html
+++ b/app/walkandplay/trunk/client/web/newaccount.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="js/gt/GMap.js"></script>
 <script type="text/javascript" src="js/GMapKeys.js"></script>
 <script type="text/javascript" src="js/WPapp.js"></script>
+<script type="text/javascript" src="js/User.js"></script>
 <script type="text/javascript" src="js/gt/KWClient.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
 </head>
