--- a/app/walkandplay/trunk/client/web/myaccount.html
+++ b/app/walkandplay/trunk/client/web/myaccount.html
@@ -3,15 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing - walk and play</title>
-<link rel="stylesheet" type="text/css" href="css/widget.css"/>
-<link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
-<link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
 <script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
 <script type="text/javascript" src="js/gt/DHTML.js"></script>
 <script type="text/javascript" src="js/gt/GMap.js"></script>
 <script type="text/javascript" src="js/GMapKeys.js"></script>
-<script type="text/javascript" src="js/gt/GTApp.js"></script>
+<script type="text/javascript" src="js/WPapp.js"></script>
+<script type="text/javascript" src="js/User.js"></script>
 <script type="text/javascript" src="js/gt/KWClient.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
 </head>
@@ -34,11 +32,12 @@
     <br />
     <br />
   </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
+  </div>
 <!-- /LOGOBOX -->
 <!-- CONTENT -->
-<div id="formblock" style="text-align:left;z-index:15;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock" style="background-color:#E9E9E9;">
+<div id="formblock" style="text-align:left;z-index:15;display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock" style="background-color:#E9E9E9; height:350px;">
     <!--SIGNUP FORM-->
     <img src="img/profile_red.gif" style="padding-left:40px;padding-top:10px;"/><img src="img/mypage.gif" />
     <ul id="tabs" style="list-style:none;">
@@ -47,6 +46,7 @@
       <li style="display:inline;" id="tab3">step 3 </li>
     </ul>
     <form enctype="application/x-www-form-urlencoded" name="signupform" id="signupform">
+	<input type="hidden" id="imageId" name="photoid" value="" />
       <div id="tab_1" style="position:relative;display:block;">
         <ul style="list-style:none;">
           <li>name (as it appears on screen):</li>
@@ -70,7 +70,7 @@
             <input type="text" class="medium" size="38" name="phone"/>
           </li>
         </ul>
-        <iframe id="uploadFrame" style="display:none;"> </iframe>
+        <iframe id="uploadFrame" style="display:none;" name="uploadFrame"> </iframe>
         &nbsp; </div>
       <div id="tab_2" style="display:none;">
         <ul style="list-style:none;">
@@ -157,72 +157,60 @@
         </ul>
         &nbsp;</div>
     </form>
-		<form id="addmediumform" name="addmediumform" enctype="multipart/form-data" target="uploadFrame" method="post" action="wp/media.srv" >
-<table>
-	<tr>
-		<td>name *</td><td><input name="name" id="name" type="text" /></td>
-	</tr>
-	<tr>
-		<td>description</td><td><input name="description" id="description" type="text"  /></td>
-	</tr>
-	<tr>
-		<td>file</td><td>
+	<form id="addmediumform" name="addmediumform" enctype="multipart/form-data" target="uploadFrame" method="post" action="wp/media.srv" >
 		<input name="file" id="file" type="file"  />
+		<input name="description" id="name" type="hidden" value="null" />
+		<input name="name" id="description" type="hidden" value="null" />
 		<input name="agentkey" id="agentkey" type="hidden" value="null" />
 		<input name="xmlrsp" id="xmlrsp" type="hidden" value="true" />
-	</td>
-	</tr>
-	   <tr>
-	<td colspan="2">
-		<a href="#" onclick="return addMedium();">[Add Medium]</a>
-	</td>
-	</tr>
-	</table>
-</form>
-<script>
-function addMedium () {
-		alert(KW.agentKey);
-		document.addmediumform.agentkey.value = KW.agentKey;
-		document.addmediumform.submit();
-		_checkIFrameRsp();
-		//var form = DH.getElementById('addmediumform');
-		//form.agentkey.value = KW.agentKey;
-		// form.submit();
-		// WT.pr('add Medium sent name=' + name);
-		return false;
-	}
-	 function _checkIFrameRsp() {
-		var iframe = DH.getObject('uploadFrame');
-		if (!iframe) {
-			WT.pr('cannot get uploadFrame');
-			return;
-		}
-
-		var iframeDoc = null;
-
-		if (iframe.contentDocument) {
-			// For NS6
-			iframeDoc = iframe.contentDocument;
-		} else if (iframe.contentWindow) {
-			// For IE5.5 and IE6
-			iframeDoc = iframe.contentWindow.document;
-		} else if (iframe.document) {
-			// For IE5
-			iframeDoc = iframe.document;
-		}
-		alert(iframeDoc);
-		if (iframeDoc == null) {
-			setTimeout('WT._checkIFrameRsp()', 2000);
-		} else {
-			// WT.onRsp(iframeDoc.documentElement);
-			alert(iframeDoc.documentElement.innerHTML);
-						setTimeout('WT._checkIFrameRsp()', 2000);
-
-		}
-	}	
-</script>
-
+		<div id="add">voeg afbeelding toe</div>
+	</form>
+	<img id="previewImage" style="display:none"/>
   </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  	<!-- -->
+  </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<!-- -->
+<div id="tourinfo" style="text-align:left;z-index:15;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock" style="background-color:#E9E9E9; height:350px;">
+  	<div><img src="img/profileheader.gif" /><img src="img/my_page.gif" /></div>
+    <div> Hello John Doe </div>
+    <div style="display:block;width:200px;height:400px;position:absolute;top:70px;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+      <div style="background-color:#E9E9E9; height:250px; border-left:5px solid #fff;border-right:5px solid #fff;">&nbsp;</div>
+      <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+    <div style="display:block;width:200px;position:absolute; top:70px;left:220px;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+      <div style="background-color:#E9E9E9; height:250px; border-left:5px solid #fff;border-right:5px solid #fff;">&nbsp;</div>
+      <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+    <div style="position:absolute; top:50px; left:440px;">
+      <ul>
+        <li>image</li>
+        <li>johndoe@hotmail.com</li>
+        <li>25 tours</li>
+        <li>4 traces</li>
+        <li>keywords: nerdistan</li>
+      </ul>
+      <ul>
+        <li>my tours</li>
+        <li>my traces</li>
+        <li>my media</li>
+        <li>my friends</li>
+        <li>upcoming tours</li>
+      </ul>
+    </div>
+  </div>
+  <script>
+  var tourinfoblock = document.getElementById('tourinfo');
+  var formblock = document.getElementById('formblock');
+  dojo.event.connect(tourinfoblock.getElementsByTagName('img')[1],'onclick',function(evt) {
+  	tourinfoblock.style.display = 'none';
+	formblock.style.display = 'block';
+  });
+   dojo.event.connect(formblock.getElementsByTagName('img')[1],'onclick',function(evt) {
+  	tourinfoblock.style.display = 'block';
+	formblock.style.display = 'none';
+  });
+  </script>
   <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <!-- / CONTENT -->
 <!-- MAP-->
@@ -238,7 +226,6 @@ function addMedium () {
 <!--/BORDERS-->
 <!-- EVENTSHANDLERS -->
 <script type="text/javascript" src="js/events.js"></script>
-<script type="text/javascript" src="js/newaccount.js"></script>
 <!-- /EVENTHANDLERS  -->
 </body>
 </html>
