base: various small editorial changes

--- a/base/trunk/server/webapp/gt/content/navhelp.html
+++ b/base/trunk/server/webapp/gt/content/navhelp.html
@@ -10,7 +10,8 @@
 
 	<p>
 		Use the + and - icons in the upper left or the slider. Note that not all maps may support
-		very detailed zoom levels at all places in the world.
+		very detailed zoom levels at all places in the world. Double clicking anywhere on the map also zooms
+		and centers the map.
 	</p>
 
 	<h3>Moving (Panning)</h3>
@@ -23,7 +24,7 @@
 	<h3>Centering</h3>
 
 	<p>
-		Double-clicking anywhere on the map centers the map
+		Double-clicking anywhere on the map centers and zooms the map
 		at that point.
 	</p>
 
