geoskating: new URL obtainement mobitracer

--- a/app/geoskating/trunk/server/webapp/gs/content/links.html
+++ b/app/geoskating/trunk/server/webapp/gs/content/links.html
@@ -43,6 +43,17 @@ Razende Rollers skatetracks (Noord Holland)
 </tr>
 <tr>
 <td>
+<a href="http://toerkanjer.web-log.nl/" target="_new">Eveliens weblog</a>
+</td>
+<td>
+Evelien beschrijft elke kilometer, die zij skeelert of fietst. Met GPS.
+</td>
+</tr>
+
+
+
+<tr>
+<td>
 <a target="_new" href="http://realtime.waag.org">realtime.waag.org</a>
 </td>
 <td>
