--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -3,15 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing</title>
-<script type="text/javascript" src="js/gt/KWClient.js"></script>
+<script type="text/javascript" src="js/KWClient.js"></script>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
 <script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
-<script type="text/javascript" src="js/gt/DHTML.js"></script>
-<script type="text/javascript" src="js/gt/GMap.js"></script>
+<script type="text/javascript" src="js/DHTML.js"></script>
+<script type="text/javascript" src="js/GMap.js"></script>
 <script type="text/javascript" src="js/GMapKeys.js"></script>
+<script type="text/javascript" src="js/MyApp.js"></script>
 <script type="text/javascript" src="js/WPapp.js"></script>
 <script type="text/javascript" src="js/User.js"></script>
-<link rel="stylesheet" href="css/geotracing.css" />
+<script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
+<link rel="stylesheet" href="css/geotracingfs.css" />
+<link rel="stylesheet" href="css/sIFR-screen.css" />
 </head>
 <body onunload="GUnload()">
 <div id="mapholder">
@@ -30,10 +33,10 @@
       <area shape="rect" coords="199,0,258,43" href="#" id="mainbuttonsview"/>
     </map>
     <ul style="text-align:right;">
-      <li> <a href="myaccount.html"><img src="img/mypageBT.gif" width="58" border="0"/></a> </li>
-      <li> <a href="about.html"><img src="img/aboutBT.gif" width="58" border="0" style="position:relative;left:7px;"/></a> </li>
-      <li> <img src="img/signinBT.gif" width="58" id="signin_bt"/></li>
-      <li> <img src="img/help_bt.gif" width="18" style="margin-right:20px;" id="help_bt"/></li>
+      <li><span><a href="myaccount.html">my page</a></span></li>
+      <li><span><a href="about.html">about</a></span></li>
+      <li id="signin_bt"><span><a href="#">sign in</a></span></li>
+      <li id="help_bt"><span>help</span></li>
     </ul>
     <br />
     <br />
@@ -87,9 +90,6 @@
     </ul>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div> 
-<script type="text/javascript">
-
-</script>
 <div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
@@ -178,25 +178,16 @@
   </div>
   <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="signup_block"> <b class="rtopgrey"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblockgrey">
-    <ul>
-      <li><a href="newaccount.html"><span class="style1">sign up!</span></a></li>
-      <li><a href="#">most popular</a></li>
-      <li><a href="#">traces near you</a></li>
-      <li><a href="upcoming.html">upcoming tours</a></li>
-    </ul>
-  </div>
-  <b class="rbottomgrey"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<script type="text/javascript" src="js/events.js"></script>
-<script>
-SRV.url = 'wp/srv/get.jsp?';
-</script>
-<style>
-#gtsig {
-	display:none;
-}
-</style>
-<table border="0" align="right" cellpadding="0" cellspacing="0" id="infobox" style="position:absolute;right:20px; top:20px;">
+  	<div class="contentblockgrey">
+   	 	<ul>
+      		<li><a href="newaccount.html"><span class="style1">sign up!</span></a></li>
+      		<li><a href="#">most popular</a></li>
+      		<li><a href="#">traces near you</a></li>
+      		<li><a href="upcoming.html">upcoming tours</a></li>
+    	</ul>
+  	</div>
+  	<b class="rbottomgrey"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+	<table border="0" align="right" cellpadding="0" cellspacing="0" id="infobox" style="display:none;position:absolute;right:20px; top:20px;">
 			<tr style="display:none;">
 				<td height="60" valign="middle" align="center" bgcolor="#dddddd">
 					<div id="trackview">TRACK PREVIEW</div>
@@ -257,5 +248,13 @@ SRV.url = 'wp/srv/get.jsp?';
 				</td>
 			</tr>
 		</table>
+		<script type="text/javascript">
+		SRV.url = 'wp/srv/get.jsp?';
+		if(typeof sIFR == "function"){
+		    sIFR.replaceElement("#logobox span", named({sFlashSrc: "js/sIFR2.0.2/skia.swf",sBgColor:"#eeeeee"}));
+    		sIFR();
+		};		
+		</script>
+		<script type="text/javascript" src="js/events.js"></script>
 </body>
 </html>
