--- a/app/walkandplay/trunk/client/web/about.html
+++ b/app/walkandplay/trunk/client/web/about.html
@@ -1,102 +1,143 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> -->
-<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"> -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
-<title>GeoTracing, loading please wait....</title>
-<link rel="stylesheet" type="text/css" href="css/widget.css"/>
-<link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
-<link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
-<script type="text/javascript" src="js/gt/KWClient.js"></script>
+<title>GeoTracing</title>
+<script type="text/javascript" src="js/KWClient.js"></script>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
-<script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
-<script type="text/javascript" src="js/gt/DHTML.js"></script>
-<script type="text/javascript" src="js/gt/GMap.js"></script>
+<script type="text/javascript" src="js/ajax-pushlet-client.js"></script>
+<script type="text/javascript" src="js/DHTML.js"></script>
+<script type="text/javascript" src="js/GMap.js"></script>
 <script type="text/javascript" src="js/GMapKeys.js"></script>
-<script type="text/javascript" src="js/gt/GTApp.js"></script>
-<link rel="stylesheet" href="css/geotracing.css" />
+<script type="text/javascript" src="js/MyApp.js"></script>
+<script type="text/javascript" src="js/WPapp.js"></script>
+<script type="text/javascript" src="js/User.js"></script>
+<script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
+<link rel="stylesheet" href="css/geotracingfs.css" />
+<link rel="stylesheet" href="css/sIFR-screen.css" />
 </head>
 <body onunload="GUnload()">
 <div id="mapholder">
-  <div id="topanchor"></div>
   <div id="map"></div>
   <div class="bbottom"></div>
   <div class="btop"></div>
   <div class="bright"></div>
   <div class="bleft"></div>
-  <div id="bottomanchor">&nbsp;</div>
 </div>
 <div id="logobox"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock"><br />
-    <a href="index.html"><img src="img/gt_logo.gif" alt="logo" width="221" border="0"/></a> <img src="img/cpv_v_over.gif" width="265" border="0" usemap="#Map" />
-    <map name="Map" id="Map">
-      <area shape="rect" coords="2,-1,79,43" href="#" />
-      <area shape="rect" coords="90,-1,149,42" href="#" />
-      <area shape="rect" coords="199,0,258,43" href="#" />
+    <a href="index.html"><img src="img/gt_logo.gif" alt="logo" width="221" border="0"/></a> <img src="img/cpv_v_over.gif" width="265" border="0" usemap="#Map" id="mainbuttons"/>
+    <map name="Map">
+      <area shape="rect" coords="2,-1,79,43" href="#" id="mainbuttonscreate"/>
+      <area shape="rect" coords="90,-1,149,42" href="#" id="mainbuttonsplay"/>
+      <area shape="rect" coords="199,0,258,43" href="#" id="mainbuttonsview"/>
     </map>
     <ul style="text-align:right;">
-      <li> <a href="#"><img src="img/mypageBT.gif" width="58" border="0"/></a> </li>
-      <li> <a href="#"><img src="img/aboutBT.gif" width="58" border="0" style="position:relative;left:7px;"/></a> </li>
-      <li> <a href="#"><img src="img/signinBT.gif" width="58" border="0"/></a> </li>
-      <li> <a href="#"><img src="img/help_bt.gif" width="18" border="0" style="margin-right:20px;"/></a> </li>
+      <li><span><a href="myaccount.html">my page</a></span></li>
+      <li><span><a href="about.html">about</a></span></li>
+      <li id="signin_bt"><span><a href="#">sign in</a></span></li>
+      <li id="help_bt"><span>help</span></li>
     </ul>
     <br />
     <br />
   </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="tagcloud"> <b class="rtopgrey"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblockgrey">
-    <ul>
-      <li style="font-size:20px;"><a href="#">tag1</a></li>
-      <li style="font-size:40px;"><a href="#">tag2</a></li>
-      <li style="font-size:30px;"><a href="#">tag3</a></li>
-      <li style="font-size:30px;"><a href="#">tag4</a></li>
-      <li style="font-size:16px;"><a href="#">tag5</a></li>
-      <li style="font-size:40px;"><a href="#">tag6</a></li>
-      <li style="font-size:50px;"><a href="#">tag7</a></li>
-      <li style="font-size:20px;"><a href="#">tag8</a></li>
-      <li style="font-size:20px;"><a href="#">tag9</a></li>
-      <li style="font-size:40px;"><a href="#">tag7</a></li>
-      <li style="font-size:30px;"><a href="#">tag6</a></li>
-      <li style="font-size:30px;"><a href="#">tag</a></li>
-      <li style="font-size:16px;"><a href="#">tag</a></li>
-      <li style="font-size:40px;"><a href="#">tag</a></li>
-      <li style="font-size:50px;"><a href="#">tag</a></li>
-      <li style="font-size:20px;"><a href="#">tag</a></li>
-      <li style="font-size:20px;"><a href="#">tag</a></li>
-      <li style="font-size:40px;"><a href="#">tag</a></li>
-      <li style="font-size:30px;"><a href="#">tag</a></li>
-      <li style="font-size:30px;"><a href="#">tag</a></li>
-      <li style="font-size:16px;"><a href="#">tag</a></li>
-      <li style="font-size:40px;"><a href="#">tag</a></li>
-      <li style="font-size:50px;"><a href="#">tag</a></li>
-      <li style="font-size:20px;"><a href="#">tag</a></li>
-    </ul>
-  </div>
-  <b class="rbottomgrey"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="tag_block"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
+</div>
+<div id="buttonbar" style="text-align:left;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
-    <div id="tagblock_title">tours tagged :</div>
     <ul>
-      <li><a href="#">nieuwmarkt</a></li>
-      <li><a href="#">city centre </a></li>
-      <li><a href="#">cycling</a></li>
+      <li> <img src="img/archive_bt.gif" alt="archive button" width="45" style=" margin-left:30px;" id="archive_bt"/> </li>
+      <li> <img src="img/map_bt.gif" alt="mapButton" width="45" border="0" id="maps_bt"/> </li>
+      <li> <img src="img/search_bt.gif" alt="search" width="45" id="search_bt"/> </li>
+      <li> <img src="img/score_bt.gif" alt="live" id="live_bt" width="45"/></li>
+      <li>
+        <div id="searchbox" style="position:absolute; width:226px; left:142px; top:72px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+          <div class="contentblock"> <span>search</span><br/>
+            <br/>
+            <form>
+              <input name="text" type="text" style="background:url(img/input_bg.jpg) no-repeat;" size="18"/>
+              <a href="#">
+              <div class="style2" id="submitSearch" style="text-align:right; text-decoration:underline;margin-right:80px;">submit</div>
+              <br />
+              </a>
+            </form>
+            <img src="img/searchTarget.gif" alt="searchTaget" style="position:absolute; left:172px; width: 33px; top: 30px;"/> </div>
+          <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+      </li>
     </ul>
   </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="signup_block"> <b class="rtopgrey"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblockgrey">
-    <ul>
-      <li><a href="newaccount.html"><span class="style1">sign up!</span></a></li>
-      <li><a href="#">most popular</a></li>
-      <li><a href="#">traces near you</a></li>
-      <li><a href="upcoming.html">upcoming tours</a></li>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="loginbox" style="position:absolute; width:220px; left:365px; top:54px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <form name="signinform" id="signinform">
+      username
+      <input type="text" id="username"/>
+      password
+      <input type="text" id="password"/>
+		<div>
+			<span id="forgotpw">forgot password</span>
+			<span id="submit_signin"> submit</span>
+		</div>	
+    </form>
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="mapbox" style="position:absolute; width:200px; left:141px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <ul style="padding:0px;">
+      <li>street map</li>
+      <li>satellite map</li>
+      <li>street + satellite</li>
     </ul>
   </div>
-  <b class="rbottomgrey"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-  
-  <div id="about"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div> 
+<div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <ul style="padding:0px;">
+      <li>archived tours</li>
+      <li>archived traces</li>
+      <li>points of interest</li>
+    </ul>
+	<ul style="padding:0px; display:none;">
+      <li>my tours</li>
+      <li>my traces</li>
+      <li>my media</li>
+    </ul>
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="archivetoursbox" style="position:absolute; width:162px; left:264px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <ul style="padding:0px;">
+      <li>live tours</li>
+      <li>live traces</li>
+      <li>live users</li>
+    </ul>
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="archivetracksbox" style="position:absolute; width:162px; left:444px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <ul style="padding:0px;">
+      <li>live tours</li>
+      <li>live traces</li>
+      <li>live users</li>
+    </ul>
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="archivebox" style="position:absolute; width:162px; left:261px; top:283px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <ul style="list-style:none;">
+      <li>archive content</li>
+    </ul>
+  </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <div id="about" style="display:block;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock"><p class="style2">What is GeoTracing?</p>
   <p>
     Geotracing is a mobile super multi-user location sharing game, which you can fully design 
@@ -126,17 +167,16 @@
     Join now and have fun. <br />
     Pack your lunch and mobile and get started <br />
     right away! <br />
-    <a href="#">What to do first? </a><br />
-    <a href="#">What to do next? </a><br />
     <br />
   </div>
   <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div> 
-<script type="text/javascript" src="js/events.js"></script>
-<style>
-#gtsig {
-	display:none;
-}
-
-</style>
+		<script type="text/javascript">
+		SRV.url = 'wp/srv/get.jsp?';
+		if(typeof sIFR == "function"){
+		    sIFR.replaceElement("#logobox span", named({sFlashSrc: "js/sIFR2.0.2/skia.swf",sBgColor:"#eeeeee"}));
+    		sIFR();
+		};		
+		</script>
+		<script type="text/javascript" src="js/events.js"></script>
 </body>
 </html>
