--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -5,7 +5,7 @@
 <title>GeoTracing</title>
 <script type="text/javascript" src="js/KWClient.js"></script>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
-<script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
+<script type="text/javascript" src="js/ajax-pushlet-client.js"></script>
 <script type="text/javascript" src="js/DHTML.js"></script>
 <script type="text/javascript" src="js/GMap.js"></script>
 <script type="text/javascript" src="js/GMapKeys.js"></script>
@@ -66,7 +66,7 @@
       </li>
     </ul>
   </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="loginbox" style="position:absolute; width:220px; left:365px; top:54px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <form name="signinform" id="signinform">
@@ -81,7 +81,7 @@
     </form>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="mapbox" style="position:absolute; width:200px; left:141px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="mapbox" style="position:absolute; width:200px; left:141px; top:272px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
       <li>street map</li>
@@ -90,7 +90,7 @@
     </ul>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div> 
-<div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:272px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
       <li>archived tours</li>
@@ -104,11 +104,11 @@
     </ul>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="archivetoursbox" style="position:absolute; width:162px; left:264px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="archivetoursbox" style="position:absolute; width:162px; left:264px; top:272px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:272px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
       <li>live tours</li>
@@ -117,11 +117,11 @@
     </ul>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="archivetracksbox" style="position:absolute; width:162px; left:444px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="archivetracksbox" style="position:absolute; width:162px; left:444px; top:272px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:272px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
       <li>live tours</li>
@@ -137,8 +137,8 @@
     </ul>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="tagcloud"> <b class="rtopgrey"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblockgrey">
+<div id="tagcloud"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock" style="height:120px;">
     <ul>
       <li style="font-size:20px;"><a href="#">tag1</a></li>
       <li style="font-size:40px;"><a href="#">tag2</a></li>
@@ -156,18 +156,10 @@
       <li style="font-size:40px;"><a href="#">tag</a></li>
       <li style="font-size:50px;"><a href="#">tag</a></li>
       <li style="font-size:20px;"><a href="#">tag</a></li>
-      <li style="font-size:20px;"><a href="#">tag</a></li>
-      <li style="font-size:40px;"><a href="#">tag</a></li>
-      <li style="font-size:30px;"><a href="#">tag</a></li>
-      <li style="font-size:30px;"><a href="#">tag</a></li>
-      <li style="font-size:16px;"><a href="#">tag</a></li>
-      <li style="font-size:40px;"><a href="#">tag</a></li>
-      <li style="font-size:50px;"><a href="#">tag</a></li>
-      <li style="font-size:20px;"><a href="#">tag</a></li>
     </ul>
   </div>
-  <b class="rbottomgrey"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="tag_block"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="tag_block" style="display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <div id="tagblock_title">tours tagged :</div>
     <ul>
@@ -177,8 +169,8 @@
     </ul>
   </div>
   <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="signup_block"> <b class="rtopgrey"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  	<div class="contentblockgrey">
+<div id="signup_block"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  	<div class="contentblock" style="height:120px;">
    	 	<ul>
       		<li><a href="newaccount.html"><span class="style1">sign up!</span></a></li>
       		<li><a href="#">most popular</a></li>
@@ -186,8 +178,8 @@
       		<li><a href="upcoming.html">upcoming tours</a></li>
     	</ul>
   	</div>
-  	<b class="rbottomgrey"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-	<table border="0" align="right" cellpadding="0" cellspacing="0" id="infobox" style="display:none;position:absolute;right:20px; top:20px;">
+<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+	<table border="0" align="right" cellpadding="0" cellspacing="0" id="infobox" style="display:block;position:absolute;right:20px; top:20px;">
 			<tr style="display:none;">
 				<td height="60" valign="middle" align="center" bgcolor="#dddddd">
 					<div id="trackview">TRACK PREVIEW</div>
@@ -247,7 +239,8 @@
 					<div id="bottomanchor">&nbsp;</div>
 				</td>
 			</tr>
-		</table>
+</table>
+		<script type="text/javascript" src="js/events.js"></script>
 		<script type="text/javascript">
 		SRV.url = 'wp/srv/get.jsp?';
 		if(typeof sIFR == "function"){
@@ -255,6 +248,5 @@
     		sIFR();
 		};		
 		</script>
-		<script type="text/javascript" src="js/events.js"></script>
 </body>
 </html>
